# study-cmake

./: README.md  build.sh
autover/: CMakeLists.txt  autover.md  main.c  version.h.in
bigtree/: CMakeLists.txt  b.bat  bigtree.md
bigtree/install/Debug/inc/: bar.h
bigtree/install/Debug/lib/: libbar.lib
bigtree/lib/: CMakeLists.txt
bigtree/lib/bar/: CMakeLists.txt  bar.c
bigtree/src/: CMakeLists.txt
bigtree/src/foo/: CMakeLists.txt  main.c
bigtree/src/hello/: CMakeLists.txt
cmake/: toolchain.cmake
cross/: CMakeLists.txt  main.c
crossbuild/: CMakeLists.txt  crossbuild.md
crossbuild/src/: CMakeLists.txt
hello/: CMakeLists.txt  hello.md
message/: CMakeLists.txt  message.md
mixarch/: CMakeLists.txt
mixarch/app32/: CMakeLists.txt  main.c
mixarch/app64/: CMakeLists.txt  main.c
opencv/: CMakeLists.txt  b.bat  cvtest.cpp
prebuild/: .gitignore  CMakeLists.txt  prebuild.md
prebuild/src/: CMakeLists.txt  main.cpp
prebuild/tools/: CMakeLists.txt  main.cpp
usegoogletest/: CMakeLists.txt  usegoogletest.md
usegoogletest/src/: CMakeLists.txt
usegoogletest/test/: CMakeLists.txt
uselibxml2/: CMakeLists.txt  uselibxml2.md
uselibxml2/src/: CMakeLists.txt  main.cpp
usellvm/: CMakeLists.txt  main.c  usellvm.md
useyasm/: CMakeLists.txt  useyasm.md
yasm/: CMakeLists.txt  mbr.asm
